@@ -5,7 +5,7 @@
 \title{Estimate size and mu for Negative Binomial distribution
 for each gene using MME method}
 \usage{
-EstPrior(Data, parallel = FALSE, NCores = 5, verbose = TRUE)
+EstPrior(Data, verbose = TRUE)
 }
 \arguments{
 \item{Data}{A matrix of single-cell expression where rows
@@ -13,15 +13,6 @@ are genes and columns are samples (cells). \code{Data}
 can be of class \code{SummarizedExperiment} (the
 assays slot contains the expression matrix and
 is named "Counts") or just matrix.}
-
-\item{parallel}{If TRUE, \code{NCores} cores will be
-used for parallelization. Default is TRUE.}
-
-\item{NCores}{number of cores to use, default is 5.
-This will be used to set up a parallel
-environment using either MulticoreParam (Linux, Mac)
-or SnowParam (Windows) with NCores
-using the package BiocParallel.}
 
 \item{verbose}{print out status messages. Default is TRUE.}
 }
