@@ -6,7 +6,7 @@
 his produces synthetic control, performs bayNorm on both real
 cell data and synthetic controls and does noisy gene detection.}
 \usage{
-noisy_gene_detection(Data, BETA_vec, mode_version = FALSE,
+noisy_gene_detection(Data, BETA_vec = NULL, mode_version = FALSE,
   mean_version = FALSE, S = 20, parallel = TRUE, NCores = 5,
   FIX_MU = TRUE, GR = FALSE, BB_SIZE = TRUE, verbose = TRUE,
   plot.out = FALSE, PRIORS = NULL, input_params = NULL)
